# event_rgb_sync

./: .gitignore  README.md  requirements.txt
config/: params.json
module1_5_tune_parameters/: tune_parameters.py
module1_led_region/: define_led_region.py
module2_timestamp_matching/: CMakeLists.txt  main.cpp
module3_visualize/: visualize_sync.py
module4_regression/: derive_sync_params.py
